--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
+<a id="2015-03-06" class="anchor" href="#2015-03-06" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-06</h5>
+
+<p><a href="http://pan.baidu.com/s/1dDlKgN3">kuwo_6.6.0_dfa92d0.7z</a></p>
+
+<p><a href="http://pan.baidu.com/s/1o69Oq98">ganji_6.1.1_dfa92d0.7z</a></p>
+
+<h5>
 <a id="2015-03-05" class="anchor" href="#2015-03-05" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-05</h5>
 
 <p><a href="http://pan.baidu.com/s/1kTIbUU7">kuwo_6.6.0_8bfe7f1.7z</a></p>
