Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
+<a id="2015-03-08" class="anchor" href="#2015-03-08" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-08</h5>
+
+<p><a href="http://pan.baidu.com/s/1ntFqgiP">test009_a80a7bb_HOTFIX_b.7z</a></p>
+
+<h5>
 <a id="2015-03-06" class="anchor" href="#2015-03-06" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-06</h5>
 
 <p><a href="http://pan.baidu.com/s/1dD90I3J">test009_a80a7bb_HOTFIX.7z</a></p>
