Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
+<a id="2015-03-16" class="anchor" href="#2015-03-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-16</h5>
+
+<p><a href="http://pan.baidu.com/s/1kTBqKo3">kuwo_6.6.0_dfa92d0.7z</a></p>
+
+<h5>
 <a id="2015-03-08" class="anchor" href="#2015-03-08" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-08</h5>
 
 <p><a href="http://pan.baidu.com/s/1ntFqgiP">test009_a80a7bb_HOTFIX_b.7z</a></p>
@@ -68,7 +73,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Crazy roba maintained by <a href="https://github.com/Bossmai">Bossmai</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
