--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
+<a id="2015-03-17" class="anchor" href="#2015-03-17" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-17</h5>
+
+<p><a href="http://pan.baidu.com/s/1qWnzYZq">kuwo_6.6.0_5f6c010.7z</a></p>
+
+<h5>
 <a id="2015-03-16" class="anchor" href="#2015-03-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-16</h5>
 
 <p><a href="http://pan.baidu.com/s/1kTBqKo3">kuwo_6.6.0_dfa92d0.7z</a></p>
