Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
+<a id="2015-03-19" class="anchor" href="#2015-03-19" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-19</h5>
+
+<p><a href="http://pan.baidu.com/s/1kTik72J">kuwo_6.6.7.0_a854c6e.7z</a></p>
+
+<h5>
 <a id="2015-03-17" class="anchor" href="#2015-03-17" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-17</h5>
 
 <p><a href="http://pan.baidu.com/s/1o682P3W">test009_25fe916_FIXKEY.7z</a></p>
