Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <h5>
 <a id="2015-03-19" class="anchor" href="#2015-03-19" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-19</h5>
 
+<p><a href="http://pan.baidu.com/s/1kTvbMsf">kuwo_6.6.7.0_1f35522.7z</a></p>
+
 <p><a href="http://pan.baidu.com/s/1dDH8Fct">kuwo_6.6.7.0_c4fd67d_HOTFIX.7z</a></p>
 
 <p><a href="http://pan.baidu.com/s/1kTik72J">kuwo_6.6.7.0_a854c6e.7z</a></p>
