Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
+<a id="2015-03-20" class="anchor" href="#2015-03-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-20</h5>
+
+<p><a href="http://pan.baidu.com/s/1o6E84UA">kuwo_6.6.7.0_fd936ef.7z</a></p>
+
+<h5>
 <a id="2015-03-19" class="anchor" href="#2015-03-19" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-19</h5>
 
 <p><a href="http://pan.baidu.com/s/1kTvbMsf">kuwo_6.6.7.0_1f35522.7z</a></p>
