Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Crazy roba : ">
 
-  <title>Crazy roba</title>
-  <meta name="description" content="">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Crazy roba</title>
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Bossmai/crazy_roba">View on GitHub</a>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Crazy roba</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/Bossmai/crazy_roba/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/Bossmai/crazy_roba/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/Bossmai/crazy_roba" class="code">View Crazy roba on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
+          <h1 id="project_title">Crazy roba</h1>
+          <h2 id="project_tagline"></h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/Bossmai/crazy_roba/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Bossmai/crazy_roba/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
 <a id="2015-03-20" class="anchor" href="#2015-03-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-20</h5>
+
+<p><a href="http://pan.baidu.com/s/1jGxfKbW">test009_178b26e.7z</a></p>
 
 <p><a href="http://pan.baidu.com/s/1o6E84UA">kuwo_6.6.7.0_fd936ef.7z</a></p>
 
@@ -96,26 +93,18 @@
 <a id="2015-03-03" class="anchor" href="#2015-03-03" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-03:</h5>
 
 <p><a href="http://pan.baidu.com/s/1bnhKwTh">roba_ganji_1.0</a></p>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/Bossmai" class="avatar"><img src="https://avatars2.githubusercontent.com/u/10671348?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Bossmai">Bossmai</a> maintains <a href="https://github.com/Bossmai/crazy_roba">Crazy roba</a></p>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Crazy roba maintained by <a href="https://github.com/Bossmai">Bossmai</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Bossmai/crazy_roba/tarball/master" class="tar">tar</a><a href="https://github.com/Bossmai/crazy_roba/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+    
 
-  
-</body>
+  </body>
 </html>
