Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 <p><a href="http://pan.baidu.com/s/1mgmSzGG">newsshixun_2fdb521.7z</a></p>
 
+<p><a href="http://pan.baidu.com/s/1c093w9i">freereader_2fdb521.7z</a></p>
+
 <h5>
 <a id="2015-03-20" class="anchor" href="#2015-03-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-20</h5>
 
