--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <h5>
 <a id="2015-03-23" class="anchor" href="#2015-03-23" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-23</h5>
 
+<p><a href="http://pan.baidu.com/s/1eQu6kmu">kuwo_6.6.7.0_6e2fd20.7z</a></p>
+
 <p><a href="http://pan.baidu.com/s/1c0wCiDq">test009_53e0fd7.7z</a></p>
 
 <p><a href="http://pan.baidu.com/s/1mgmSzGG">newsshixun_2fdb521.7z</a></p>
