Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
+<a id="2015-03-26" class="anchor" href="#2015-03-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-26</h5>
+
+<p><a href="http://pan.baidu.com/s/1gdD1hCn">kuwo_6.6.7.0_c9c3c8e.7z</a></p>
+
+<h5>
 <a id="2015-03-23" class="anchor" href="#2015-03-23" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-23</h5>
 
 <p><a href="http://pan.baidu.com/s/1eQu6kmu">kuwo_6.6.7.0_6e2fd20.7z</a></p>
