--- a/index.html
+++ b/index.html
@@ -1,43 +1,51 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Crazy roba by Bossmai</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  </head>
+  <body>
 
-  <title>Crazy roba</title>
-  <meta name="description" content="">
+      <header>
+        <h1>Crazy roba</h1>
+        <p></p>
+      </header>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+      <div id="banner">
+        <span id="logo"></span>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Crazy roba</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/Bossmai/crazy_roba/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/Bossmai/crazy_roba/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/Bossmai/crazy_roba" class="code">View Crazy roba on GitHub</a>
+        <a href="https://github.com/Bossmai/crazy_roba" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/Bossmai/crazy_roba/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/Bossmai/crazy_roba/tarball/master" class="button">TAR</a></li>
+          </ul>
         </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <h3>
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
+
+<h5>
+<a id="2015-03-28" class="anchor" href="#2015-03-28" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-28</h5>
+
+<p><a href="http://pan.baidu.com/s/1ycv8q">ifengnews_V4.4.1_3116_0e4ac67.7z</a></p>
 
 <h5>
 <a id="2015-03-27" class="anchor" href="#2015-03-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-27</h5>
@@ -119,26 +127,13 @@
 <a id="2015-03-03" class="anchor" href="#2015-03-03" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-03:</h5>
 
 <p><a href="http://pan.baidu.com/s/1bnhKwTh">roba_ganji_1.0</a></p>
-        </article>
-      </div>
+      </section>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/Bossmai">Bossmai</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/Bossmai" class="avatar"><img src="https://avatars2.githubusercontent.com/u/10671348?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Bossmai">Bossmai</a> maintains <a href="https://github.com/Bossmai/crazy_roba">Crazy roba</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Bossmai/crazy_roba/tarball/master" class="tar">tar</a><a href="https://github.com/Bossmai/crazy_roba/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
