Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,43 +4,36 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Crazy roba by Bossmai</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-
-      <header>
+    <div class="wrapper">
+      <header class="without-description">
         <h1>Crazy roba</h1>
         <p></p>
+        <p class="view"><a href="https://github.com/Bossmai/crazy_roba">View the Project on GitHub <small>Bossmai/crazy_roba</small></a></p>
+        <ul>
+          <li><a href="https://github.com/Bossmai/crazy_roba/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Bossmai/crazy_roba/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Bossmai/crazy_roba">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/Bossmai/crazy_roba" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/Bossmai/crazy_roba/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/Bossmai/crazy_roba/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
       <section>
         <h3>
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
+
+<h5>
+<a id="2015-03-29" class="anchor" href="#2015-03-29" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-29</h5>
+
+<p><a href="http://pan.baidu.com/s/1i3GKVQ1">ifengnews_V4.4.1_3116_11652bc.7z</a></p>
 
 <h5>
 <a id="2015-03-28" class="anchor" href="#2015-03-28" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-28</h5>
@@ -128,11 +121,11 @@
 
 <p><a href="http://pan.baidu.com/s/1bnhKwTh">roba_ganji_1.0</a></p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/Bossmai">Bossmai</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
     </div>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/Bossmai">Bossmai</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
