--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <h5>
 <a id="2015-03-29" class="anchor" href="#2015-03-29" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-29</h5>
 
+<p><a href="http://pan.baidu.com/s/1i3ouDvv">ifengnews_V4.4.1_3116_8e0018d.7z</a></p>
+
 <p><a href="http://pan.baidu.com/s/1i3GKVQ1">ifengnews_V4.4.1_3116_11652bc.7z</a></p>
 
 <h5>
