Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,34 +4,47 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Crazy roba by Bossmai</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/Bossmai/crazy_roba">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/Bossmai/crazy_roba/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/Bossmai/crazy_roba/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header class="without-description">
-        <h1>Crazy roba</h1>
-        <p></p>
-        <p class="view"><a href="https://github.com/Bossmai/crazy_roba">View the Project on GitHub <small>Bossmai/crazy_roba</small></a></p>
-        <ul>
-          <li><a href="https://github.com/Bossmai/crazy_roba/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Bossmai/crazy_roba/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Bossmai/crazy_roba">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
+
       <section>
+        <div id="title">
+          <h1>Crazy roba</h1>
+          <p></p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/Bossmai">Bossmai</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
         <h3>
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
 <a id="2015-03-29" class="anchor" href="#2015-03-29" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-03-29</h5>
+
+<p><a href="http://pan.baidu.com/s/175Mpw">kuwo_6.6.7.0_1215a0b.7z</a></p>
 
 <p><a href="http://pan.baidu.com/s/1i3ouDvv">ifengnews_V4.4.1_3116_8e0018d.7z</a></p>
 
@@ -123,11 +136,8 @@
 
 <p><a href="http://pan.baidu.com/s/1bnhKwTh">roba_ganji_1.0</a></p>
       </section>
+
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/Bossmai">Bossmai</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
