Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
+<a id="2015-04-16" class="anchor" href="#2015-04-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-04-16</h5>
+
+<p><a href="http://pan.baidu.com/s/1bn2KGkZ">superVPN_9f95622.7z</a></p>
+
+<h5>
 <a id="2015-04-11" class="anchor" href="#2015-04-11" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-04-11</h5>
 
 <p><a href="http://pan.baidu.com/s/1dD2G2ad">com.qihoo.appstore_300030210_996ecac.7z</a></p>
