Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 <a id="latest-release" class="anchor" href="#latest-release" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest Release:</h3>
 
 <h5>
+<a id="2015-04-21" class="anchor" href="#2015-04-21" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-04-21</h5>
+
+<p><a href="http://pan.baidu.com/s/1mgn95sW">qihoo_48005_bd4c9e1.7z</a></p>
+
+<h5>
 <a id="2015-04-18" class="anchor" href="#2015-04-18" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-04-18</h5>
 
 <p><a href="http://pan.baidu.com/s/1hqDzYOs">qihoo_ece654a.7z</a></p>
