Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
 <p><a href="http://pan.baidu.com/s/1mgn95sW">qihoo_48005_bd4c9e1.7z</a></p>
 
+<p><a href="http://pan.baidu.com/s/1mgxcTxm">haosou_qgw_69_1b5cb93.7z</a></p>
+
+<p><a href="http://pan.baidu.com/s/1sjFPAWH">h2_Android_2.3_V4.4.0_3130_e346abc.7z</a></p>
+
 <h5>
 <a id="2015-04-18" class="anchor" href="#2015-04-18" aria-hidden="true"><span class="octicon octicon-link"></span></a>2015-04-18</h5>
 
